--- a/templates/repo/.editorconfig
+++ b/templates/repo/.editorconfig
@@ -36,12 +36,12 @@ csharp_style_var_for_built_in_types = true:suggestion
 csharp_style_var_when_type_is_apparent = true:suggestion
 
 # expression-bodied members
-csharp_style_expression_bodied_methods = false:silent
-csharp_style_expression_bodied_constructors = false:silent
-csharp_style_expression_bodied_operators = false:silent
-csharp_style_expression_bodied_properties = true:silent
-csharp_style_expression_bodied_indexers = true:silent
-csharp_style_expression_bodied_accessors = true:silent
+csharp_style_expression_bodied_methods = false:none
+csharp_style_expression_bodied_constructors = false:none
+csharp_style_expression_bodied_operators = false:none
+csharp_style_expression_bodied_properties = true:suggestion
+csharp_style_expression_bodied_indexers = true:suggestion
+csharp_style_expression_bodied_accessors = true:suggestion
 
 # expression-level preferences
 dotnet_style_object_initializer = true:none
@@ -65,7 +65,7 @@ csharp_indent_block_contents = true
 csharp_indent_braces = false
 csharp_indent_case_contents = true
 csharp_indent_switch_labels = true
-csharp_indent_labels = one_less_than_current
+csharp_indent_labels = flush_left
 
 # new line preferences
 csharp_new_line_before_open_brace = all
@@ -168,24 +168,20 @@ dotnet_naming_symbols.everything_else_symbols.applicable_accessibilities = *
 # StyleCop diagnostics severity
 dotnet_diagnostic.SA0001.severity = suggestion
 dotnet_diagnostic.SA1000.severity = suggestion
-dotnet_diagnostic.SA1005.severity = suggestion
 dotnet_diagnostic.SA1009.severity = none
 dotnet_diagnostic.SA1101.severity = none
 dotnet_diagnostic.SA1118.severity = none
 dotnet_diagnostic.SA1128.severity = suggestion
 dotnet_diagnostic.SA1200.severity = none
-dotnet_diagnostic.SA1202.severity = suggestion
-dotnet_diagnostic.SA1204.severity = suggestion
+dotnet_diagnostic.SA1204.severity = silent
 dotnet_diagnostic.SA1208.severity = none
-dotnet_diagnostic.SA1210.severity = suggestion
 dotnet_diagnostic.SA1305.severity = suggestion
 dotnet_diagnostic.SA1309.severity = none
 dotnet_diagnostic.SA1313.severity = suggestion
 dotnet_diagnostic.SA1402.severity = none
 dotnet_diagnostic.SA1413.severity = none
-dotnet_diagnostic.SA1502.severity = suggestion
-dotnet_diagnostic.SA1502.severity = suggestion
 dotnet_diagnostic.SA1512.severity = none
+dotnet_diagnostic.SA1502.severity = suggestion
 dotnet_diagnostic.SA1515.severity = none
 dotnet_diagnostic.SA1600.severity = none
 dotnet_diagnostic.SA1602.severity = none
@@ -198,12 +194,16 @@ dotnet_diagnostic.SA1637.severity = none
 dotnet_diagnostic.SA1638.severity = none
 dotnet_diagnostic.SA1640.severity = none
 dotnet_diagnostic.SA1641.severity = none
-dotnet_diagnostic.SA1649.severity = suggestion
+dotnet_diagnostic.SA1649.severity = silent
 dotnet_diagnostic.SA1652.severity = none
-csharp_using_directive_placement = outside_namespace:silent
+dotnet_diagnostic.SA1402.severity = silent
+dotnet_diagnostic.SA1210.severity = suggestion
+dotnet_diagnostic.SA1005.severity = suggestion
+dotnet_diagnostic.SA1502.severity = silent
+csharp_using_directive_placement = outside_namespace:warning
 csharp_prefer_simple_using_statement = true:suggestion
 csharp_prefer_braces = true:silent
-csharp_style_namespace_declarations = file_scoped:silent
+csharp_style_namespace_declarations = file_scoped:error
 csharp_style_prefer_method_group_conversion = true:silent
 csharp_style_prefer_top_level_statements = true:silent
 csharp_style_expression_bodied_lambdas = true:silent
@@ -230,15 +230,14 @@ csharp_style_prefer_switch_expression = true:suggestion
 csharp_style_prefer_pattern_matching = true:silent
 csharp_style_prefer_not_pattern = true:suggestion
 csharp_style_prefer_extended_property_pattern = true:suggestion
-dotnet_diagnostic.SA1623.severity = suggestion
-dotnet_diagnostic.SA1206.severity = silent
+csharp_style_prefer_readonly_struct_member = true:suggestion
+dotnet_diagnostic.SA1625.severity = silent
 csharp_style_prefer_primary_constructors = true:suggestion
-csharp_prefer_system_threading_lock = true:suggestion
 csharp_prefer_static_anonymous_function = true:suggestion
-dotnet_diagnostic.SA1110.severity = none
-dotnet_diagnostic.SA1111.severity = none
 
+# Rules for Skanetrafikens C# projects
 # Description: Code analysis rules for this project.
+
 # Code files
 [*.{cs,vb}]
 
@@ -308,6 +307,7 @@ dotnet_diagnostic.CA2238.severity = warning
 dotnet_diagnostic.CA2240.severity = warning
 dotnet_diagnostic.CA2241.severity = warning
 dotnet_diagnostic.CA2242.severity = warning
+dotnet_diagnostic.CS1573.severity = suggestion
 
 dotnet_diagnostic.CS1591.severity = none
 # CS8618: Non-nullable field is uninitialized. Consider declaring as nullable.
@@ -347,7 +347,7 @@ dotnet_style_coalesce_expression = true:suggestion
 dotnet_style_null_propagation = true:suggestion
 dotnet_style_prefer_is_null_check_over_reference_equality_method = true:suggestion
 dotnet_style_prefer_auto_properties = true:silent
-dotnet_style_object_initializer = true:suggestion
+dotnet_style_object_initializer = true:none
 dotnet_style_collection_initializer = true:suggestion
 dotnet_style_prefer_simplified_boolean_expressions = true:suggestion
 dotnet_style_prefer_conditional_expression_over_assignment = true:silent
@@ -359,8 +359,8 @@ dotnet_style_prefer_compound_assignment = true:suggestion
 dotnet_style_prefer_simplified_interpolation = true:suggestion
 dotnet_style_namespace_match_folder = true:suggestion
 dotnet_style_readonly_field = true:suggestion
-dotnet_style_predefined_type_for_member_access = true:silent
-dotnet_style_predefined_type_for_locals_parameters_members = true:silent
+dotnet_style_predefined_type_for_member_access = true:suggestion
+dotnet_style_predefined_type_for_locals_parameters_members = true:suggestion
 dotnet_style_require_accessibility_modifiers = for_non_interface_members:silent
 dotnet_style_allow_multiple_blank_lines_experimental = true:silent
 dotnet_style_allow_statement_immediately_after_block_experimental = true:silent
