--- a/templates/repo/Directory.Build.props
+++ b/templates/repo/Directory.Build.props
@@ -4,17 +4,20 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>$(NoWarn);1591;NU1505</NoWarn>
-    <RuntimeIdentifiers>win-x64;linux-x64;</RuntimeIdentifiers>
   </PropertyGroup>
 
   <PropertyGroup>
     <RepoRoot>$(MSBuildThisFileDirectory)</RepoRoot>
     <NeutralLanguage>en-US</NeutralLanguage>
-    <IsPackable>false</IsPackable>
-    <Authors></Authors>
-    <PackageLicenseExpression></PackageLicenseExpression>
-    <RepositoryType>git</RepositoryType>
-    <PublishRepositoryUrl>false</PublishRepositoryUrl>
+    <Authors>Peter Nylander</Authors>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <Copyright>Copyright © 2024 Peter Nylander </Copyright>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <ContainerRuntimeIdentifier>linux-x64</ContainerRuntimeIdentifier>
+    <EnableSdkContainerSupport>false</EnableSdkContainerSupport>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -23,14 +26,31 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <PackageOutputPath>$(MSBuildThisFileDirectory)artifacts</PackageOutputPath>
+    <IsPackable Condition="$(ProjectName.Contains('Sample'))">false</IsPackable>
+    <IsPackable Condition="$(ProjectName.Contains('Test'))">false</IsPackable>
+  </PropertyGroup>
+
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>CODE_ANALYSIS</DefineConstants>
   </PropertyGroup>
 
-  <ItemGroup Condition="!$(MSBuildProjectName.Contains('.Deployment'))">
-    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.507" PrivateAssets="all" />
-    <AdditionalFiles Include="$(MSBuildThisFileDirectory)stylecop.json">
-      <Link>Properties\stylecop.json</Link>
-    </AdditionalFiles>
+  <PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
+    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+  </PropertyGroup>
+
+  <PropertyGroup Label="Enable SourceLink Support">
+
+    <RepositoryType>git</RepositoryType>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <PackageProjectUrl>https://github.com/penyland/</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/penyland/</RepositoryUrl>
+
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All"/>
   </ItemGroup>
+
 </Project>
